Fix sonarcloud issues.
Request: MO
Change-Id: Ia63fbd6e4c910e8f7a68510fbb62754b7421523f